<resources>
    <string name="dberror">Database Error. Try clearing app data in Android\'s settings</string>
    <string name="plus_str">+</string>
    <string name="minus_str">-</string>
    <string name="zero_str">0</string>
    <string name="twenty_str">20</string>
    <string name="plus_one">+1</string>
    <string name="plus_five">+5</string>
    <string name="minus_one">-1</string>
    <string name="minus_five">-5</string>
	<string name="app_name">MTG Familiar</string>
    <string-array name="supertypes">
        <item>Artifact</item>
        <item>Basic</item>
        <item>Creature</item>
        <item>Enchantment</item>
        <item>Instant</item>
        <item>Land</item>
        <item>Legendary</item>
        <item>Ongoing</item>
        <item>Plane</item>
        <item>Planeswalker</item>
        <item>Scheme</item>
        <item>Snow</item>
        <item>Sorcery</item>
        <item>Tribal</item>
        <item>Vanguard</item>
        <item>World</item>
    </string-array>
    <string-array name="logic_spinner">
        <item>></item>
        <item>&lt;</item>
        <item>=</item>
    </string-array>
    <string-array name="rarities">
        <item>Common</item>
        <item>Uncommon</item>
        <item>Rare</item>
        <item>Mythic</item>
    </string-array>
    <string-array name="pt_spinner">
        <item/>
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>*</item>
        <item>1+*</item>
        <item>2+*</item>
        <item>7-*</item>
        <item>99</item>
        <item>*^2</item>
        <item>0.5</item>
        <item>1.5</item>
        <item>2.5</item>
        <item>3.5</item>
    </string-array>
    <string-array name="cmc_spinner">
        <item/>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>1000000</item>
    </string-array>
    <string-array name="momir_spinner">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>15</item>
        <item>16</item>
    </string-array>
    <string-array name="color_spinner">
        <item>May Include Any Color(s)</item>
        <item>Must Include All Colors</item>
        <item>No Other Colors</item>
        <item>Exact (all selected and no others)</item>
    </string-array>
    <string name="pow">Power</string>
    <string name="tou">Toughness</string>
    <string name="formatsearch">Format</string>
    <string name="setsearch">Set</string>
    <string name="cmc">CMC</string>
    <string name="image">Card Image</string>
    <string name="price">Card Price</string>
    <string name="cardsearch">Card Search</string>
    <string name="lifecounter">Life Counter</string>
    <string name="manapool">Mana Pool</string>
    <string name="random">Dice</string>
    <string name="searchrarity">Rarity</string>
    <string name="clear">Clear Fields</string>
    <string name="clear_all">Clear All</string>
    <string name="legality">Legality</string>
    <string name="about">About App</string>
    <string name="high">High:</string>
    <string name="med">Average:</string>
    <string name="low">Low:</string>
    <string name="pricetitle">TCGPlayer.com Prices</string>
    <string name="chkupd">Force Update</string>
    <string name="preferences">Settings</string>
    <string name="transform">Transform</string>
    <string name="d2title">Treat D2 As Coin</string>
    <string name="webDB">Build DB from Web</string>
    <string name="refreshDB">Refresh DB from APK</string>
    <string name="searchButton">Search!</string>
    <string name="randomButton">Randomize!</string>
    <string name="tcgplayerlink">Click here for all prices and trend info</string>
    <string name="toast_no_result">No Results Found</string>
    <string name="name">Name</string>
    <string name="subtype">Subtype</string>
    <string name="supertype">Supertype</string>
    <string name="text">Text</string>
    <string name="flavor_text">Flavor Text</string>
    <string name="artist">Artist</string>
    <string name="about_this_app">This app is my gift to the MTG community.&lt;br />&lt;br />
Please send questions, comments, concerns, and praise to &lt;a href="mailto:mtg.familiar@gmail.com">mtg.familiar@gmail.com&lt;/a>.&lt;br />&lt;br />
Join the &lt;a href="http://code.google.com/p/mtg-familiar">open source project&lt;/a> on Google Code.&lt;br />&lt;br />
Thanks to zagaberoo for beautiful graphics and even more beautiful code.&lt;br />&lt;br />
Thanks to April King for the massive QA effort, and learning Java. Shh, don\'t tell anyone about that.&lt;br />&lt;br />
Thanks to Toastdeib for being my SQL guru sitting on top of the mountain.&lt;br />&lt;br />
Thanks to Reuben for being the best kind of user. You know, the kind that becomes a developer!&lt;br />&lt;br />
Thanks to chaudakh for the wonderful Gatherer Extractor program.&lt;br />&lt;br />
Thanks to reddit\'s &lt;a href="http://www.reddit.com/r/magicTCG/">/r/magictcg&lt;/a> for testing and feedback.&lt;br />&lt;br />
Thanks to my brother for the icon.&lt;br />&lt;br />
Thanks to Chedy @ &lt;a href="http://tcgplayer.com">TCGPlayer.com&lt;/a> for the price API.&lt;br />&lt;br />
Special thanks to Richard Garfield and the rest of the folks at &lt;a href="http://www.wizards.com/magic">Wizards of the Coast&lt;/a>.&lt;br />&lt;br />
-gelakinetic&lt;br />&lt;br />&lt;br />
Magic the Gathering and Magic the Gathering cards are ™ &amp; © Wizards of the Coast LLC.&lt;br />&lt;br />
Program licenced under the &lt;a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License v3+&lt;/a>.&lt;br />&lt;br />
Media licenced under under the &lt;a href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License&lt;a>.</string>
    <string name="whatsnew">
        
        
        
        
        
   
   - Improved compatability for Honeycomb and Ice Cream Sandwitch devices.&lt;br />&lt;br />
   - Various database bugfixes.&lt;br />&lt;br />
   - Various UI optimizations.
     	</string>
    <string name="gatherer">Gatherer Page</string>
    <string name="lifetitle">Life Counter</string>
    <string name="wakelocksummary">Force the life counter screen to never go to sleep</string>
    <string name="wakelocktitle">Wake Lock</string>
    <string name="copy">Copy Section To Clipboard</string>
    <string name="copyall">Copy Card To Clipboard</string>
    <string-array name="updatefrequencydays">
        <item>1 day</item>
        <item>2 days</item>
        <item>3 days</item>
        <item>5 days</item>
        <item>1 week</item>
        <item>2 weeks</item>
    </string-array>
    <string-array name="updatefrequencydaysvalues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>7</item>
        <item>14</item>
    </string-array>
    <string name="search_hint">Search Names</string>
    <string name="cardviewtitle">Card View</string>
    <string name="picfirsttitle">Always Show Art</string>
    <string name="picfirstsummary">When viewing a card, load official card image instead of rules text</string>
    <string name="resultlisttitle">Result List</string>
    <string name="setPreftitle">Show Set</string>
    <string name="manacostPreftitle">Show Mana Cost</string>
    <string name="typePreftitle">Show Type/Subtype</string>
    <string name="abilityPreftitle">Show Rules Text</string>
    <string name="ptPreftitle">Show Power/Toughness</string>
    <string name="automaticupdatetitle">Automatic Updates</string>
    <string name="automaticupdatesummary">Check for new sets and bannings when the app opens</string>
    <string name="updatefrequencytitle">Update Frequency</string>
    <string name="updatefrequencysummary">Number of days to go between checking for new sets and bannings</string>
    <string name="random_creature">Random Creature</string>
    <string name="random_eqipment">Random Equipment</string>
    <string name="random_instant">Three Random Instants</string>
    <string name="random_sorcery">Three Random Sorceries</string>
    <string name="momirlabel">CMC =</string>
    <string name="stonehewer_label">CMC ≤</string>
    <string name="mojhosto_label">MoJhoSto Basic</string>
    <string name="randomleft">&lt;</string>
    <string name="randomright">></string>
    <string name="random_rules">MoJhoSto Basic Rules</string>
    <string name="mojhostorules">
    MoJhoSto is a casual Vanguard format from Magic Online.&lt;br />&lt;br />
    To play, each player must have a deck which consists of only 60 basic lands.&lt;br />&lt;br />
    Each player starts the game with three Vanguards: Momir Vig, Jhoira, and Stonehewer Giant.&lt;br />&lt;br />
    These Vanguards adjust each player\'s starting and maximum hand size (9) and starting life total (19).&lt;br />&lt;br />
    Any abilities printed on a Vanguard card are played exactly like those of an in-play Magic card.&lt;br />&lt;br />
    However, these abilities have no color and damage from them isn\'t damage from a permanent of any type or a source of any color.&lt;br />&lt;br />
    A Vanguard card isn\'t a Magic card, so it can\'t be affected by spells or abilities.&lt;br />&lt;br />
    You can tap each picture to see the full Vanguard card.&lt;br />&lt;br />
    You can read the rules at any time from the menu.&lt;br />&lt;br />
    Pen and paper might be useful for tracking the game state. Sadly, MTG Familiar cannot spawn actual cards.&lt;br />&lt;br />
    Good luck, and have fun!</string>
    <string name="addplayer">Add a Player</string>
    <string name="removeplayer">Remove a Player</string>
    <string name="quittosearch">Quit To Search</string>
    <string name="consolidate">Consolidate Search Results</string>
    <string name="consolidatetext">Only show the most recent printing of a card</string>
    <string name="whatsnewtitle">What\'s New</string>
    <string name="donate">Donate</string>
    <string name="donate_to_devs">
        For a premium M:TG app like this, how much would you pay? $1,000? $10,000?&lt;br />&lt;br />
        Well, if you\'re reading this, you already know we\'re giving it away for free!&lt;br />&lt;br />
        Coding is hard work though, and us devs appreciate the extra dollar here or there.&lt;br />&lt;br />
        We\'ve got a drafting habit to fuel, ok?&lt;br />&lt;br />
        You can click the button below to donate via PayPal. $1 is cool. $5 is cooler. You get the drift.&lt;br />&lt;br />
        So, how generous are you feeling today?</string>
    <string name="start_timer">Start Timer</string>
    <string name="resume_timer">Resume Timer</string>
    <string name="pause_timer">Pause Timer</string>
    <string name="reset_timer">Reset Timer</string>
    <string name="timertitle">Round Timer</string>
    <string name="ringtonetitle">Timer Ringtone</string>
    <string name="ringtonesummary">Select a notification ringtone to play when the round timer ends</string>
    <string name="roundend_text">The round will end in:</string>
    <string name="hours">HH</string>
    <string name="minutes">MM</string>
</resources>