<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2011 Adam Feinstein and April King.

This file is part of MTG Familiar.

MTG Familiar is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

MTG Familiar is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with MTG Familiar.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--         android:actionViewClass="android.widget.SearchView"
    
        android:onClick="emulateSearchKey"
     -->
    <item
        android:id="@+id/checkUpdate"
        android:icon="@drawable/menu_update"
        android:title="@string/chkupd"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/preferences"
        android:icon="@drawable/menu_settings"
        android:title="@string/preferences"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/donate"
        android:icon="@drawable/menu_donate"
        android:title="@string/donate"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/whatsnew"
        android:icon="@drawable/menu_new"
        android:title="@string/whatsnewtitle"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/aboutapp"
        android:icon="@drawable/menu_about"
        android:title="@string/about"
        android:showAsAction="ifRoom"/>
    <!--
    <item android:title="@string/refreshDB" android:id="@+id/refreshDB"/>
    <item android:title="@string/webDB" android:id="@+id/buildWebDB"></item>
    -->

</menu>
