<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2011 Adam Feinstein This file is part of MTG Familiar. MTG 
	Familiar is free software: you can redistribute it and/or modify it under 
	the terms of the GNU General Public License as published by the Free Software 
	Foundation, either version 3 of the License, or (at your option) any later 
	version. MTG Familiar is distributed in the hope that it will be useful, 
	but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY 
	or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for 
	more details. You should have received a copy of the GNU General Public License 
	along with MTG Familiar. If not, see <http://www.gnu.org/licenses/>. -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="Card Search">
		<CheckBoxPreference android:title="Automatic Updates"
			android:summary="Check for new sets and bannings each time the app opens"
			android:defaultValue="true" android:key="autoupdate" />
	</PreferenceCategory>
	<PreferenceCategory android:title="Dice">
		<CheckBoxPreference android:title="@string/d2title"
			android:key="d2AsCoin" android:defaultValue="true" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/lifetitle">
		<CheckBoxPreference android:key="wakelock" android:defaultValue="true" android:summary="@string/wakelocksummary" android:title="@string/wakelocktitle"/>
	</PreferenceCategory>
	<!-- 
	<PreferenceCategory android:title="Deck Manager">
		<EditTextPreference android:defaultValue="@string/defaultdeckpath"
			android:summary="@string/defaultpathsummary" android:title="@string/defaultpathtitle"
			android:key="@string/default_deck_path_key" android:dialogTitle="@string/default_deck_path_dialog_title" />
	</PreferenceCategory>
	 -->
</PreferenceScreen>
