<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2011 Adam Feinstein This file is part of MTG Familiar. MTG 
	Familiar is free software: you can redistribute it and/or modify it under 
	the terms of the GNU General Public License as published by the Free Software 
	Foundation, either version 3 of the License, or (at your option) any later 
	version. MTG Familiar is distributed in the hope that it will be useful, 
	but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY 
	or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for 
	more details. You should have received a copy of the GNU General Public License 
	along with MTG Familiar. If not, see <http://www.gnu.org/licenses/>. -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scrollView1" android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent">
		<EditText android:layout_width="fill_parent" android:id="@+id/namesearch"
			android:hint="@string/name" android:layout_weight="1"
			android:layout_height="wrap_content" android:imeOptions="actionSearch"
			android:singleLine="true" android:inputType="text" />
		<EditText android:id="@+id/typesearch" android:layout_width="fill_parent"
			android:hint="@string/type" android:layout_weight="1"
			android:layout_height="wrap_content" android:imeOptions="actionSearch"
			android:singleLine="true" android:inputType="text" />
		<EditText android:layout_width="fill_parent" android:id="@+id/textsearch"
			android:hint="@string/text" android:layout_weight="1"
			android:layout_height="wrap_content" android:imeOptions="actionSearch"
			android:singleLine="true" android:inputType="text" />
		<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="3dip" android:layout_marginBottom="3dip">
			<LinearLayout android:id="@+id/linearLayout5" android:layout_height="match_parent" android:layout_width="wrap_content" android:layout_weight="1" android:gravity="center">
				<CheckBox android:id="@+id/checkBoxW" android:layout_height="wrap_content" android:layout_width="wrap_content" android:button="@drawable/wcheck_selector"></CheckBox>
			</LinearLayout>
			<LinearLayout android:id="@+id/linearLayout6" android:layout_height="match_parent" android:layout_width="wrap_content" android:layout_weight="1" android:gravity="center_horizontal">
				<CheckBox android:id="@+id/checkBoxU" android:layout_height="wrap_content" android:layout_width="wrap_content" android:button="@drawable/ucheck_selector"></CheckBox>
			</LinearLayout>
			<LinearLayout android:id="@+id/linearLayout7" android:layout_height="match_parent" android:layout_width="wrap_content" android:layout_weight="1" android:gravity="center_horizontal">
				<CheckBox android:id="@+id/checkBoxB" android:layout_height="wrap_content" android:layout_width="wrap_content" android:button="@drawable/bcheck_selector"></CheckBox>
			</LinearLayout>
			<LinearLayout android:id="@+id/linearLayout8" android:layout_height="match_parent" android:layout_width="wrap_content" android:layout_weight="1" android:gravity="center_horizontal">
				<CheckBox android:id="@+id/checkBoxR" android:layout_height="wrap_content" android:layout_width="wrap_content" android:button="@drawable/rcheck_selector"></CheckBox>
			</LinearLayout>
			<LinearLayout android:id="@+id/linearLayout9" android:layout_height="match_parent" android:layout_width="wrap_content" android:layout_weight="1" android:gravity="center_horizontal">
				<CheckBox android:id="@+id/checkBoxG" android:layout_height="wrap_content" android:layout_width="wrap_content" android:button="@drawable/gcheck_selector"></CheckBox>
			</LinearLayout>
			<LinearLayout android:id="@+id/linearLayout10" android:layout_height="match_parent" android:layout_width="wrap_content" android:layout_weight="1" android:gravity="center_horizontal">
				<CheckBox android:id="@+id/checkBoxL" android:layout_height="wrap_content" android:layout_width="wrap_content" android:button="@drawable/xcheck_selector"></CheckBox>
			</LinearLayout>

		</LinearLayout>
		<Spinner android:id="@+id/colorlogic" android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="fill_parent"></Spinner>
		<LinearLayout android:layout_width="fill_parent"
			android:id="@+id/linearLayout2" android:layout_weight="1"
			android:layout_height="wrap_content">
			<TextView android:layout_height="wrap_content" android:id="@+id/textView1"
				style="@style/text" android:layout_gravity="center"
				android:layout_width="120dip" android:text="@string/pow" />
			<Spinner android:layout_weight="1" android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:id="@+id/powLogic" />
			<Spinner android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_weight="1"
				android:id="@+id/powChoice" />
		</LinearLayout>
		<LinearLayout android:layout_width="fill_parent"
			android:id="@+id/linearLayout3" android:layout_weight="1"
			android:layout_height="wrap_content">
			<TextView android:id="@+id/textView2" android:layout_height="wrap_content"
				android:text="@string/tou" android:layout_gravity="center" style="@style/text"
				android:layout_width="120dip" />
			<Spinner android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_weight="1"
				android:id="@+id/touLogic" />
			<Spinner android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_weight="1"
				android:id="@+id/touChoice" />
		</LinearLayout>
		<LinearLayout android:layout_width="fill_parent"
			android:id="@+id/linearLayout4" android:layout_weight="1"
			android:layout_height="wrap_content">
			<TextView android:id="@+id/textView3" android:layout_height="wrap_content"
				android:layout_gravity="center" style="@style/text"
				android:layout_width="120dip" android:text="@string/cmc" />
			<Spinner android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_weight="1"
				android:id="@+id/cmcLogic" />
			<Spinner android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_weight="1"
				android:id="@+id/cmcChoice" />
		</LinearLayout>
		<LinearLayout android:id="@+id/linearLayout4"
			android:layout_width="fill_parent" android:orientation="horizontal"
			android:layout_weight="1" android:layout_height="wrap_content">
			<Button android:layout_width="wrap_content" android:id="@+id/setsearch"
				android:layout_height="wrap_content" android:text="@string/setsearch"
				android:layout_weight="1" />
			<Button android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_weight="1"
				android:id="@+id/formatsearch" android:text="@string/formatsearch" />
			<Button android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_weight="1"
				android:id="@+id/raritysearch" android:text="@string/searchrarity" />
		</LinearLayout>
		<LinearLayout android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_weight="1">
			<EditText android:imeOptions="actionSearch" android:layout_weight="1" android:layout_height="wrap_content" android:hint="@string/flavor_text" android:layout_width="fill_parent" android:id="@+id/flavorsearch" android:inputType="text" android:maxLines="1">
			</EditText>
			<EditText android:imeOptions="actionSearch" android:layout_weight="1" android:layout_height="wrap_content" android:hint="@string/artist" android:layout_width="fill_parent" android:id="@+id/artistsearch" android:inputType="text" android:maxLines="1"></EditText>
		</LinearLayout>
		<Button android:id="@+id/searchbutton" android:layout_width="fill_parent"
			android:layout_weight="1" android:layout_height="wrap_content"
			android:text="@string/searchButton" />

	</LinearLayout>
</ScrollView>
