<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2011 Alex Levine

This file is part of MTG Familiar.

MTG Familiar is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

MTG Familiar is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with MTG Familiar.  If not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/hours"
                android:textSize="10pt" />

            <View
                android:layout_width="40dp"
                android:layout_height="fill_parent" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/minutes"
                android:textSize="10pt" />
        </LinearLayout>

        <TimePicker
            android:id="@+id/rt_time_picker"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/rt_action_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/start_timer"
                android:textSize="8pt" />

            <Button
                android:id="@+id/rt_reset_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/reset_timer"
                android:textSize="8pt" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/rt_roundend"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/roundend_text"
            android:textSize="12pt" />

        <TextView
            android:id="@+id/rt_time_display"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="30pt" />
    </LinearLayout>

</ScrollView>